--- a/longest_palindromic_substring.ipynb
+++ b/longest_palindromic_substring.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1f2d2f66",
+   "metadata": {},
+   "source": [
+    "Given a string s, return the longest palindromic substring in s.\n",
+    "\n",
+    "A string is called a palindrome string if the reverse of that string is the same as the original string.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: s = \"babad\"\n",
+    "\n",
+    "Output: \"bab\"\n",
+    "\n",
+    "Explanation: \"aba\" is also a valid answer.\n",
+    "\n",
+    "Example 2:\n",
+    "\n",
+    "\n",
+    "Input: s = \"cbbd\"\n",
+    "\n",
+    "Output: \"bb\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "b744aad6",
