--- a/contains_duplicate.ipynb
+++ b/contains_duplicate.ipynb
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7135b039",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nums = [\"a\", \"b\", \"a\", \"c\", \"c\"]\n"
+    "nums = [1,2,3,3,5,6,7,6]\n"
    ]
   },
   {
@@ -59,39 +59,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55b32386",
+   "metadata": {},
+   "source": [
+    "or"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "864c7474",
+   "id": "20755cc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def duplic(nums):\n",
+    "    return len(nums)!=len(set(nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1bfd3738",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num = ['a','b','c']\n",
-    "duplicate(num)"
+    "duplic(nums)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91fc0511",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20f8fd87",
+   "id": "9d007fa3",
    "metadata": {},
    "outputs": [],
    "source": []
