--- a/missing_number.ipynb
+++ b/missing_number.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "7ec5afb9",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "c10e9ef9",
    "metadata": {},
    "outputs": [
@@ -64,49 +64,50 @@
        "2"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums=[0,1]\n",
+    "nums=[0,1,3,4]\n",
     "missing(nums)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c6f9a717",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "e2da26b1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d2d2ff9",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "def missing(nums):\n",
+    "    len_nums = len(nums)\n",
+    "    a = set(range(len_nums)).difference(set(nums)) \n",
+    "    return list(a)[0] if a else len_nums"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c1191cd3",
+   "execution_count": 19,
+   "id": "e2da26b1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums=[0,1,3,4]\n",
+    "missing(nums)"
+   ]
   }
  ],
  "metadata": {
