--- a/single_number.ipynb
+++ b/single_number.ipynb
@@ -69,6 +69,48 @@
     "nums =[1,1,2,2,3,3,4,5,5,23,23]\n",
     "single(nums)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f17053d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_single(nums):\n",
+    "    return 2*sum(set(nums)) - sum(nums)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "006979f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums =[1,1,2,2,3,3,4,5,5,23,23]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "94b2a15b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_single(nums)"
+   ]
   }
  ],
  "metadata": {
